--- a/.gitignore
+++ b/.gitignore
@@ -400,3 +400,6 @@ FodyWeavers.xsd
 /References
 /server/serverMod/types/
 /server/serverMod/dist/
+/server/serverMod/dist/src/CustomItemEventRouter.ts
+/server/serverMod/dist/lacyway-mergeconsumables.zip
+/server/serverMod/dist/package.json
