--- a/fika/MergeConsumablesFika.csproj
+++ b/fika/MergeConsumablesFika.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net471</TargetFramework>
-    <AssemblyName>MergeConsumables</AssemblyName>
-    <RootNamespace>MergeConsumables</RootNamespace>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <AssemblyName>MergeConsumablesFika</AssemblyName>
+    <RootNamespace>MergeConsumablesFika</RootNamespace>
     <LangVersion>latest</LangVersion>
 
     <!-- Optional, but recommended for mod builds -->
@@ -34,6 +34,9 @@
     <Reference Include="spt-reflection">
       <HintPath>..\References\spt-reflection.dll</HintPath>
     </Reference>
+	  <Reference Include="Fika.Core">
+		  <HintPath>..\References\Fika.Core.dll</HintPath>
+	  </Reference>
 
     <!-- Unity DLLs -->
     <Reference Include="UnityEngine">
